Programming Languages/Hw2/part4/t44.output
running e2c
compiling the C generated code
t44.c: In function ‘main’:
t44.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t44.c:5:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a + );
                ^
t44.c:5:16: note: each undeclared identifier is reported only once for each function it appears in
t44.c:5:20: error: expected expression before ‘)’ token
 printf("%d\n", a + );
                    ^
t44.c:6:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t44.c:10:2: error: expected expression before ‘=’ token
  = ;
  ^
t44.c:12:2: error: expected expression before ‘=’ token
  = ;
  ^
t44.c:13:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t44.c:14:9: error: expected expression before ‘;’ token
 1 = 1 + ;
         ^
t44.c:16:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t44.c:21:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
